--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -169,7 +169,7 @@
 
 \begin{frame}{実験方法}
     \begin{itemize}
-        \item 2スレッドのマルチスレッド実行系とシングルスレッド実行系でそれぞれ5分間実行し, 各チェーンの平均ケース応答時間（ACRT）と最悪ケース応答時間（WCRT）を測定する（これは安全境界ではない）
+        \item 2スレッドのマルチスレッドエグゼキュータとシングルスレッドエグゼキュータでそれぞれ5分間実行し, 各チェーンの平均ケース応答時間（ACRT）と最悪ケース応答時間（WCRT）を測定する（これは安全境界ではない）
         \item \hlink{theorem2}{Theorem 2} により各鎖の応答時間境界を計算し, 観測された下限と比較する
     \end{itemize}
 \end{frame}
@@ -179,7 +179,7 @@
     \fitimage{
         \begin{itemize}
             \item 全てのコールバックがリエントラントコールバックグループに属すとして, ケーススタディ1による実験結果を表に示す
-            \item マルチスレッド実行系でスケジューリングされた各チェインの応答時間はシングルスレッド実行系よりはるかに小さいことがわかる
+            \item マルチスレッドエグゼキュータでスケジューリングされた各チェインの応答時間はシングルスレッドエグゼキュータよりはるかに小さいことがわかる
             \item さらに, 我々の方法は安全であり, 測定された下限値に近い
         \end{itemize}
     }{exp_case_study_1.png}
