--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/related_work.tex
@@ -4,6 +4,19 @@
 \label{sec: related work}
 
 
+\begin{frame}{既存研究との比較表}
+    \full{
+        \begin{table}[tb]
+            \adjustbox{max width=\textwidth, max height=\slideheight}{
+                \centering\begin{tabular}{|c|c|} \hline
+                    本論文 & \ch \\\hline
+                \end{tabular}
+            }
+        \end{table}
+    }
+\end{frame}
+
+
 \begin{frame}{ROS におけるリアルタイムパフォーマンスの向上の既存研究との比較}
     以下のような研究があるが, 分析的なリアルタイム性の保証はしていない
     \begin{itemize}
