--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/system_model.tex
@@ -13,7 +13,7 @@
     \begin{itemize}
         \item 始めに, 本論文で登場する表記法・用語の表を示す
         \item 基本的な表記法・用語は資料中で説明無しで使用する
-        \item 暗記するのは困難なため, 別ファイルで開く・印刷するなどして, 常に参照できる状態にしておくことを推奨する
+        \item 別ファイルで開く・印刷するなどして, 常に参照できる状態にしておくことを推奨する
     \end{itemize}
 \end{frame}
 
