--- a/setting.tex
+++ b/setting.tex
@@ -158,12 +158,20 @@
 
 %%%%% Original Command %%%%%
 \newcommand{\lastpage}[0]{\begin{frame}\begin{textblock*}{1.0\linewidth}(0pt, 50pt)\includegraphics[scale=0.512]{\beamerDir/master_figure/last.pdf}\end{textblock*}\end{frame}}
+\newcommand{\summary}[0]{
+    \begin{frame}{}
+        \vspace{3mm}
+        \centering
+        \hspace{3mm}\includegraphics[scale=0.44]{one_page_summary.jpg}
+    \end{frame}
+}
 \newcommand{\todo}[1]{\al{\LARGE\textbf{TODO:} #1}}
 \newcommand{\headerheight}[0]{9mm}
 \newcommand{\footerheight}[0]{3mm}
 \newcommand{\slideheight}[0]{\textheight-\headerheight-\footerheight}
 \newcommand{\tabml}[1]{\hspace{-2.1mm}\begin{tabular}{l} #1 \end{tabular}}
 \newcommand{\al}[1]{\alert{#1}}
+\newcommand{\ch}[0]{\checkmark}
 % \newcommand{\tb}[1]{\textbf{#1}} Don't use
 \newcommand{\tb}[1]{#1}
 \newcommand{\notes}[1]{{\footnotesize\\※#1}}
