--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/introduction.tex
@@ -4,17 +4,18 @@
 \label{sec: introduction}
 
 \begin{frame}{ROS (Robot Operating System)}
-    \begin{block}{ROS (Robot Operating System)}
-        \begin{itemize}
-            \item ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つ
-            \item ソフトウェアのモジュール性と構成可能性を促進し, ロボットソフトウェア開発の生産性を向上
-        \end{itemize}
-    \end{block}
-    \vspace{5mm}
+    \full{
+        \begin{block}{ROS (Robot Operating System)}
+            \begin{itemize}
+                \item ロボット工学アプリケーションで最も人気のあるオープンソースソフトウェアフレームワークの 1 つ
+                \item ソフトウェアのモジュール性と構成可能性を促進し, ロボットソフトウェア開発の生産性を向上
+            \end{itemize}
+        \end{block}
+    }
 \end{frame}
 
 \begin{frame}{ROS 2}
-    ROS にはリアルタイム機能がないため, \tb{ROS 2への移行が進んでいる}
+    ROS にはリアルタイム機能がないため, \al{ROS 2}への移行が進んでいる
     \begin{block}{ROS 2}
         \begin{itemize}
             \item 2017 年にリリースされた第 2 世代の ROS
@@ -24,12 +25,12 @@
 \end{frame}
 
 \begin{frame}{ハードリアルタイム制約}
-    \tb{セーフクリティカルなロボットソフトウェアはハードリアルタイム制約がある}ため, 設計者はタイミング動作を正確にモデル化して分析を行い, リアルタイム制約を実行時に常に保証する必要がある
+    セーフクリティカルなロボットソフトウェアは\al{ハードリアルタイム制約}があるため, 設計者はタイミング動作を正確にモデル化して分析を行い, リアルタイム制約を実行時に常に保証する必要がある
 \end{frame}
 
 \begin{frame}{ROS 2 エグゼキュータ}
     \begin{itemize}
-        \item ROS 2 のリアルタイムパフォーマンスに関連するコアコンポーネントはエグゼキュータ
+        \item ROS 2 のリアルタイム性能を左右するコアコンポーネントは\al{エグゼキュータ}
         \begin{block}{エグゼキュータ}
             OS のスレッドでワークロードの実行を調整
         \end{block}
@@ -53,9 +54,9 @@
 \end{frame}
 
 \begin{frame}{本論文の貢献}
-    \begin{itemize}
-        \item \tb{ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に\\関する最初の作業を実施}
-        \item \tb{マルチスレッドエグゼキュータ上に展開される処理チェーンとして\\実装されたシステムのスケジューリングモデルを提示し,\\その応答時間分析手法を開発}
-        \item \tb{エグゼキュータのスケジューリング動作による応答時間への影響を調査し, マルチスレッドエグゼキュータのリスクを特定}
-    \end{itemize}
+    \begin{enumerate}
+        \item ROS 2 マルチスレッドエグゼキュータのリアルタイムパフォーマンス分析に\\関する最初の作業を実施
+        \item マルチスレッドエグゼキュータ上に展開される処理チェーンとして\\実装されたシステムのスケジューリングモデルを提示し,\\その応答時間分析手法を開発
+        \item エグゼキュータのスケジューリング動作による応答時間への影響を調査し, マルチスレッドエグゼキュータのリスクを特定
+    \end{enumerate}
 \end{frame}
