--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -23,19 +23,19 @@
 \summary
 \input{abstract.tex}
 
-\begin{frame}{Outline}
-    \setbeamertemplate{section in toc}[sections numbered]
-    \scriptsize\tableofcontents[hideallsubsections]
-\end{frame}
+% \begin{frame}{Outline}
+%     \setbeamertemplate{section in toc}[sections numbered]
+%     \scriptsize\tableofcontents[hideallsubsections]
+% \end{frame}
 
 \input{introduction.tex}
 \input{background.tex}
-\input{system_model.tex}
-\input{responce_time_analysis.tex}
-\input{the_second_boud.tex}
-\input{experiments.tex}
-\input{related_work.tex}
-\input{conclusion_future_work.tex}
+% \input{system_model.tex}
+% \input{responce_time_analysis.tex}
+% \input{the_second_boud.tex}
+% \input{experiments.tex}
+% \input{related_work.tex}
+% \input{conclusion_future_work.tex}
 
 \lastpage
 
