--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/introduction.tex
@@ -3,71 +3,77 @@
 \section{INTRODUCTION}
 \label{sec: introduction}
 
-\begin{frame}{}
+\begin{frame}{ROS}
     \begin{itemize}
-        \item ROS (ロボットオペレーティングシステム) [4] は, ロボットアプリケーション向けの最も人気のあるオープンソースミドルウェアフレームワークの 1 つである
-\item ROS の出現は, 産業界と学界の両方で開発者コミュニティに革命をもたらし, 新しいアプリケーションを構築するための膨大な数のツール, ロボットシステム, およびベストプラクティスを提供した [3]
-\item 短期間で生産的なロボットソフトウェア開発を達成できた背景には, ソフトウェアのモジュール性とコンポーザビリティが大きな役割を果たしてきた
-\item しかし, 何十年にもわたって, ROS は, タイミングおよび安全性が重要なアプリケーションのリアルタイムサポートの欠点を自明にしてきた
-\item これが, コミュニティでの ROS の第 2 世代である ROS2 の開発の動機となった
+        \item ROS (Robot Operating System) は, ロボットアプリケーション向けの最も人気のあるオープンソースミドルウェアフレームワークの 1 つである
+        \item ROS の出現は, 産業界と学界の両方で開発者コミュニティに革命をもたらし, 新しいアプリケーションを構築するための膨大な数のツール, ロボットシステム, およびベストプラクティスを提供した
+        \item 短期間で生産的なロボットソフトウェア開発を達成できた背景には, ソフトウェアのモジュール性とコンポーザビリティが大きな役割を果たしてきた
+        \item しかし, 何十年にもわたって, ROS はタイミングおよび安全性が重要なアプリケーションのリアルタイムサポートの欠点がある
+        \item これが ROS の第 2 世代である ROS2 の開発の動機となった
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ROS2}
     \begin{itemize}
-        \item ROS2 [6] は 2017 年から開発されており, リアルタイム機能の改善を主な考慮事項としている
-\item ほとんどの概念は元の ROS フレームワークから継承されているが, ROS2 は, リアルタイムデータ配信の業界標準である Data Distribution Service (DDS) を介したノード間通信などの独自の機能を採用している [2]
-\item ROS2 の新しいアーキテクチャは, リアルタイムのロボットソフトウェアをより適切にサポートすることを目的としている
-\item しかし, それでも厳しいタイミング制約が保証されるわけではなく, システム設計者はタイミング関連のパラメーターを経験的に調整する必要がある
+        \item ROS2 は 2017 年から開発されており, リアルタイム機能の改善を主な考慮事項としている
+        \item ほとんどの概念は元の ROS フレームワークから継承されているが, ROS2 は, リアルタイムデータ配信の業界標準である Data Distribution Service (DDS) を介したノード間通信などの独自の機能を採用している
+        \item ROS2 の新しいアーキテクチャは, リアルタイムのロボットソフトウェアをより適切にサポートすることを目的としている
+        \item しかし, それでも厳しいタイミング制約が保証されるわけではなく, システム設計者はタイミング関連のパラメーターを経験的に調整する必要がある
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{タイミング制約}
     \begin{itemize}
         \item ROS2 でセーフティクリティカルなアプリケーションのタイミング制約を保証することは重要な機能である
-\item これらの制約に違反すると壊滅的な結果が生じる可能性があるためであるたとえば, 自動運転車のパスフォローイングコントロールに対する ROS ナビゲーションパッケージからの応答が遅れると, 追突事故が発生する可能性がある
+        \item これらの制約に違反すると壊滅的な結果が生じる可能性があるためである
+        \item 例えば, 自動運転車の経路追従操作に対する ROS ナビゲーションパッケージからの応答が遅れると, 追突事故が発生する可能性がある
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ROS2 アプリケーションのタイミング保証が困難な理由}
+    タイミング保証を提供することは, 次の理由により困難である
     \begin{itemize}
-        \item また, そのようなタイミング保証を提供することは, 次の理由により困難である
-\item まず, このようなアプリケーションは通常, データ依存関係を持つコールバックのセットで構成されるチェーンを形成する
-\item したがって, システム設計者は, チェーンのエンドツーエンドレイテンシの安全な上界を知る必要がある
-\item 第 2 に, 多くの先行研究がエンドツーエンドチェーンレイテンシの分析手法を提案しているが [7, 9, 12, 21], それらは ROS2 フレームワークに直接適用できない
-\item これは, エグゼキュータやノード (セクション III-B で詳述)
+        \item このようなアプリケーションは通常, データ依存関係を持つコールバックのセットで構成されるチェーンを形成するため, システム設計者は, チェーンのエンドツーエンドレイテンシの安全な上界を知る必要がある
+        \item 多くの先行研究がエンドツーエンドチェーンレイテンシの分析手法を提案しているが, それらは ROS2 フレームワークに直接適用できない
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{ROS2 アプリケーションの分析に関する先行研究}
     \begin{itemize}
-        \item 本論文の知る限りでは, ROS2 スケジューリングアーキテクチャのリアルタイム性を正式に分析した最近の研究は, Casini らによって行われた研究のみである
-\item [11]
-\item 彼らは特に, ROS2 のコアスケジューリングエンティティの 1 つであるエグゼキュータ内のコールバックのチェーンの分析に焦点を当てた
-\item これは ROS2 のリアルタイム作業の先駆者であり, 研究コミュニティに分析プラットフォームを提供する
-\item しかし, 多くの未解決の問題がある
-\item たとえば, エグゼキュータ内のスケジューリング動作にのみ焦点を当てており, マルチコアシステムのエグゼキュータと CPU コアへのスケジューリングエンティティの割り当ては考慮されていない
-\item さらに, エンドツーエンドのレイテンシ分析は, ROS2 スケジューリングアーキテクチャの制限に悩まされ, 新しいスケジューラ設計の開発の動機となっている
+        \item 本論文の知る限りでは, ROS2 スケジューリングアーキテクチャのリアルタイム性を正式に分析した最近の研究は, Casini らによって行われた研究~\cite{casini2019response}のみである
+        \item 彼らは特に ROS2 のコアスケジューリングエンティティの 1 つであるエグゼキュータ内のコールバックのチェーンの分析に焦点を当てた
+        \item これは ROS2 のリアルタイム作業の先駆者であり, 研究コミュニティに分析プラットフォームを提供する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{先行研究の課題}
+    先行研究には以下２つの課題がある
     \begin{itemize}
-        \item 本論文では, マルチコア環境でのROS2用の優先度駆動型チェーンウェアスケジューラであるPiCASを提案する
-\item 本論文のジョブの目標は, 重要度とタイミングの要件に基づいてチェーンのコールバックの実行に優先順位を付けることにより, エンドツーエンドのチェーンレイテンシを最小限に抑えることである
-\item ROS2「Eloquent Elusor」バージョンに PiCAS を実装し, 実際の組み込みプラットフォームでそのパフォーマンスを評価した
+        \item エグゼキュータ内のスケジューリング動作にのみ焦点を当てており, マルチコアシステムのエグゼキュータと CPU コアへのスケジューリングエンティティの割り当ては考慮されていない
+        \item エンドツーエンドのレイテンシ分析は, ROS2 スケジューリングアーキテクチャの制限に悩まされ, 新しいスケジューラ設計の開発の動機となっている
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    本論文の主な貢献は以下のとおりである
+\begin{frame}{本論文の提案}
+    \begin{itemize}
+        \item 本論文では, マルチコア環境における ROS2用 の優先度駆動型チェーン考慮スケジューラである PiCAS を提案する
+        \item 本論文の目標は, 重要度とタイミングの要件に基づいてチェーンのコールバックの実行に優先順位を付けることにより, エンドツーエンドのチェーンレイテンシを最小限に抑えることである
+        \item ROS2「Eloquent Elusor」バージョンに PiCAS を実装し, 実際の組み込みプラットフォームでそのパフォーマンスを評価した
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{貢献 1}
     \begin{itemize}
         \item  コールバックの優先順位の割り当てと, マルチコアプラットフォームの CPU コアへのエグゼキュータおよびエグゼキュータへのノードの割り当てを含む PiCAS の設計を提示する
-\item PiCAS は, チェーンのエンドツーエンドのタイミング要件を尊重しながら, コールバックとエグゼキュータを実行する
-
+        \item PiCAS は, チェーンのエンドツーエンドのタイミング要件を尊重しながら, コールバックとエグゼキュータを実行する
         \item  提案されたPiCASフレームワークの下で, チェーンのエンドツーエンドのレイテンシを上界とする分析を開発する
-\item 分析は, チェーンのエンドツーエンドのレイテンシーの安全な境界を提供する
-\item - 組み込みプラットフォームでの実用的なシナリオを使用したケーススタディと, ランダムなワークロードを使用したスケジューリング可能性の実験を実施した
-\item 実験結果は, 提案されたスケジューラーが, デフォルトの ROS2 スケジューラーおよび最新の分析作業よりもエンドツーエンドのレイテンシーを大幅に改善することを示している
+        \item 分析は, チェーンのエンドツーエンドのレイテンシの安全な境界を提供する
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{貢献 2}
+    \begin{itemize}
+        \item 組み込みプラットフォームでの実用的なシナリオを使用したケーススタディと, ランダムなワークロードを使用したスケジューラビリティの実験を実施した
+        \item 実験結果は, 提案されたスケジューラがデフォルトの ROS2 スケジューラおよび最新の分析作業よりもエンドツーエンドのレイテンシを大幅に改善することを示している
     \end{itemize}
 \end{frame}
