--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
@@ -3,51 +3,81 @@
 \section{CHALLENGES}
 \label{sec: challenges}
 
-\begin{frame}{}
-    このセクションでは, 組み込みプラットフォームを使用した実験から観察したスケジューリング動作に基づいて, 現在の ROS2 フレームワークの課題について詳しく説明する
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        組み込みプラットフォームを使用した実験から観察したスケジューリング動作に基づいて, 現在の ROS2 フレームワークの課題について詳しく説明する
+    \end{itembox}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{実験環境1}
     \begin{itemize}
-        \item 実験は, NVIDIA Xavier NX 上で動作する ROS2 "Eloquent Elusor" バージョンを使用して実施された
-\item 表 I に示すように, 10 個のコールバックで構成される 2 つのセーフティクリティカルチェーンが使用される
-\item チェーン 1 はチェーン 2 よりも重要であると想定している
-\item ユニプロセッサシステムを想定すると, 次の 2 つのケースが実行される
-\item (1) 全てのコールバックが単一のエグゼキュータにある, (2) 各チェーンのコールバックが別のエグゼキュータに割り当てられる, すなわち, チェーンごとに 1 つのエグゼキュータが割り当てられる
+        \item 実験は, NVIDIA Xavier NX 上で動作する ROS2 "Eloquent Elusor" バージョンを使用して実施する
+        \item ユニプロセッサシステムを想定する
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
-    ここで, 実験から観察された次の 2 つの主要な課題について説明する
-
+\begin{frame}{実験環境2}
+    \fitimage{
+        \begin{itemize}
+            \item 表 に示すように, 10 個のコールバックで構成される 2 つのセーフティクリティカルチェーンを使用する
+            \item チェーン 1 はチェーン 2 よりも重要であると想定する
+        \end{itemize}
+    }{challenge_model.png}
 \end{frame}
 
-\begin{frame}{課題 1}
+\begin{frame}{実験環境3}
+    次の 2 つのケースで実験を行う
     \begin{itemize}
-        \item エグゼキュータ内の公平性に基づくスケジューリング
-\item セクションで説明されているエグゼキュータのユニークなスケジューリング動作
-\item III-B は, タイマコールバックを常に最初にスケジュールし, 他の通常のコールバックの優先順位の割り当てを無効にすることである
-\item さらに, ROS2 スケジューラはチェーンによってコールバックを区別しないため, 全てのコールバックはチェーンレベルのタイミング要件を考慮せずにスケジュールされる
-\item 図 2 a は, 2 つのチェーンが一緒に実行されるときの単一のエグゼキュータ内のコールバックのスケジューリングタイムラインを示している
-\item 観察できるように, ROS2 は時間の経過とともに両方のチェーンの公平な進行をもたらし, そのような公平性に基づくスケジューリングは, 安全性が重要なチェーンの適時性を危険にさらす可能性があり, 表 II に示されているように非常に高い遅延が発生する
+        \item 全てのコールバックが単一のエグゼキュータにある
+        \item 各チェーンのコールバックが別のエグゼキュータに割り当てられる, すなわち, チェーンごとに 1 つのエグゼキュータが割り当てられる
     \end{itemize}
 \end{frame}
 
-\begin{frame}{エグゼキュータの優先順位の割り当て}
+\begin{frame}{[課題 1] エグゼキュータ内の公平性に基づくスケジューリング}
     \begin{itemize}
-        \item デフォルトでは, エグゼキュータは Linux カーネルの Completely Fair Scheduler (CFS) [30] によってスケジュールされる
-\item このスケジューラーの下では, クリティカルチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先順位を付けることは困難である
-\item 幸いなことに, システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 はそれを構成するための公式のインターフェイスを提供していない
-\item しかし, ROS2 executor の優先順位の割り当てに関する一般的なガイドラインはない
-\item 最も直感的な方法は, 図 $2 \mathrm{~b}$ で行ったように, 最も重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てることである
-\item ここで, チェーン 1 の全てのコールバックを含むエグゼキュータは, SCHED\_FIFO で 99 のリアルタイム優先度を持つ
-\item ポリシーとチェーン 2 の他のエグゼキュータには 98 がある
-\item しかし, この方法では, 表 III に示すように, チェーン 2 自体のインスタンス間の自己干渉によって発生する, チェーン 2 の望ましくないほど長いレイテンシの問題は解決されない
+        \item エクゼキュータ特有のスケジューリング動作は, タイマコールバックを常に最初にスケジュールし, 他のレギュラーコールバックの優先度割り当てを無効にするというものである
+        \item さらに, ROS2スケジューラは, チェーンによってコールバックを区別しないため, 全てのコールバックは, チェーンレベルのタイミング要件の概念を考慮せずにスケジュールされる.
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{[課題 1] 例}
+    \fitimage{
+        \begin{itemize}
+            \item 図は, 2 つのチェーンが一緒に実行されるときの単一のエグゼキュータ内のコールバックのスケジューリングタイムラインを示している
+            \item ROS2 は両方のチェーンを公平に処理することが分かる
+        \end{itemize}
+    }{challenge1_example.png}
+\end{frame}
+
+\begin{frame}{[課題 1] 問題点}
+    \fitimage{
+        公平性に基づくスケジューリングは, 表に示すように非常に高いレイテンシが発生するため, セーフティクリティカルチェーンの適時性を危険にさらす可能性がある
+    }{challenge1_result.png}
+\end{frame}
+
+\begin{frame}{[課題2] エグゼキュータの優先順位割り当て}
     \begin{itemize}
-        \item 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, そのようなコールバックは異なるエグゼキュータに個別に割り当てることができないため, エグゼキュータの優先順位の割り当てはより困難になることに注意
+        \item デフォルトでは, エグゼキュータは Linux カーネルの Completely Fair Scheduler (CFS)~\cite{wong2008fairness} によってスケジュールされる
+        \item このスケジューラの下では, クリティカルチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先順位を付けることは困難である
+        \item システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 はそれを構成するための公式のインターフェイスを提供していない
+        \item さらに, ROS2 エグゼキュータ の優先順位の割り当てに関する一般的なガイドラインはない
     \end{itemize}
+\end{frame}
+
+\begin{frame}{[課題2] 直観的な方法}
+    \fitimage{
+        \begin{itemize}
+            \item 最も直感的な方法は, 最も重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てること
+            \item チェーン1の全てのコールバックを含むエグゼキュータの優先度を99とし, チェーン2の他のエグゼキュータの優先度98とした場合のスケジュールタイムラインを図に示す
+        \end{itemize}
+    }{challenge2_timeline.png}
+\end{frame}
+
+\begin{frame}{[課題2] 直観的な方法の問題点}
+    \fitimage{
+        \begin{itemize}
+            \item 表に示すように, インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
+            \item さらに, 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先順位の割り当てはより困難になる
+        \end{itemize}
+    }{challenge2_result.jpg}
 \end{frame}
