--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
@@ -1,22 +1,27 @@
 % !TeX root = main.tex
 
-\section{Conclusion}
+\section{CONCLUSION}
 \label{sec: conslusion}
 
-\begin{frame}{}
+\begin{frame}{本論文の提案}
     \begin{itemize}
-        \item 本論文では, 優先度駆動型のチェーンを意識したスケジューリングと, ROS2 向けのそのエンドツーエンドのレイテンシ解析フレームワークを提案する
-\item チェーンの重要度に基づいてエンドツーエンドのレイテンシを削減するために, エグゼキュータ内およびエグゼキュータ間のコールバックのスケジューリングポリシーを提案する
-\item 次に, これらの戦略を実現するコールバック優先度割り当てとチェーン対応ノード割り当てアルゴリズムを提示する
-\item NVIDIA Xavier NX プラットフォーム上で動作する ROS2 の Eloquent Elusor バージョンにチェーンウェアスケジューラを実装した
-\item ケーススタディの結果は, 提案されたスケジューラが, 実際のシナリオでのエンドツーエンドのレイテンシに関して, 既存の ROS2 スケジューリングよりも優れていることを示している
-\item また, 本論文の分析技術がレイテンシーの上界を厳密に制限し, 最先端技術と比較してスケジューリング可能率が向上することも示されている
+        \item 優先度駆動型のチェーン考慮スケジューリングと, そのエンドツーエンドのレイテンシ解析フレームワークを提案した
+        \item チェーンの重要度に基づいてエンドツーエンドのレイテンシを削減するために, エグゼキュータ内およびエグゼキュータ間のコールバックのスケジューリングポリシーを提案した
+        \item これらのスケジューリングポリシーを実現するコールバック優先度割り当てとチェーン対応ノード割り当てアルゴリズムを提示した
+        \item NVIDIA Xavier NX プラットフォーム上で動作する ROS2 の Eloquent Elusor バージョンにスケジューラを実装した
     \end{itemize}
 \end{frame}
 
-\begin{frame}{}
+\begin{frame}{評価結果}
     \begin{itemize}
-        \item 次のステップとして, autoware.auto などの ROS2 上に構築された自動運転ソフトウェアなど, より複雑で実用的なシナリオに作業を展開する
-\item また, DDS 通信の QoS の構成を含む, さまざまな ROS2 設定の作業を拡張する予定である
+        \item ケーススタディの結果は, 提案されたスケジューラが実際のシナリオでのエンドツーエンドのレイテンシに関して, 既存の ROS2 スケジューリングよりも優れていることを示した
+        \item また, 分析技術がレイテンシの上界を厳密に制限し, 最先端技術と比較してスケジューラビリティが向上することを示した
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Future work}
+    \begin{itemize}
+        \item Autoware.Auto などの ROS2 上に構築された自動運転ソフトウェアなど, より複雑で実用的なシナリオに作業を展開する
+        \item DDS 通信の QoS の構成を含む, さまざまな ROS2 設定の作業を拡張する
     \end{itemize}
 \end{frame}
